Closed Bug 1529274 Opened 5 years ago Closed 5 years ago

Perma mozmake.EXE[4]: *** [Unified_cpp_protocol_http2.obj] Error 1 after config/rules.mk:805: recipe for target 'Unified_cpp_protocol_http2.obj' failed when Gecko 67 merges to beta on 2019-03-11

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- unaffected
firefox67 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: valentin)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

#[markdown(off)]
Filed by: rmaries [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=229430715&repo=try

https://queue.taskcluster.net/v1/task/FeR4npL6SbaD5wQiw9a0vw/runs/1/artifacts/public/logs/live_backing.log

14:09:06 INFO - 3 errors generated.
14:09:06 INFO - z:/task_1550668703/build/src/config/rules.mk:805: recipe for target 'Unified_cpp_protocol_http2.obj' failed
14:09:06 INFO - mozmake.EXE[4]: *** [Unified_cpp_protocol_http2.obj] Error 1
14:09:06 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/protocol/http'
14:09:06 INFO - mozmake.EXE[4]: *** Waiting for unfinished jobs....
14:09:06 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1550668703/build/src/obj-firefox/security/sandbox'
14:09:07 INFO - security/sandbox/sync_policy.obj
14:09:07 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1550668703/build/src/obj-firefox/security/sandbox'
14:09:07 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/sctp/datachannel'
14:09:07 INFO - mkdir -p '.deps/'
14:09:07 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/sctp/datachannel'
14:09:07 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/sctp/datachannel'
14:09:07 INFO - netwerk/sctp/datachannel/DataChannel.obj
14:09:07 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/sctp/datachannel'
14:09:07 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1550668703/build/src/obj-firefox/netwerk/sctp/src'
14:09:07 INFO - netwerk/sctp/src/sctp_cc_functions.obj
14:09:07 INFO - z:/task_1550668703/build/src/clang/bin/clang-cl.exe -Xclang -std=gnu99 --target=aarch64-windows-msvc -Fosctp_cc_functions.obj -c -flto=thin -fuse-ld=lld -DNDEBUG=1 -DTRIMMED=1 -DWIN32_LEAN_AND_MEAN -D_WIN32 -DWIN32 -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DOS_WIN=1 -D_UNICODE -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DUNICODE -D_WINDOWS -D_SECURE_ATL -DCOMPILER_MSVC -DSCTP_SIMPLE_ALLOCATOR=1 -DSCTP_PROCESS_LEVEL_LOCKS=1 -D__Userspace__=1 -DCALLBACK_API=1 -DSCTP_DEBUG=1 -D__Userspace_os_Windows=1 -D_LIB=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -Iz:/task_1550668703/build/src/netwerk/sctp/src -Iz:/task_1550668703/build/src/obj-firefox/netwerk/sctp/src -Iz:/task_1550668703/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -Iz:/task_1550668703/build/src/ipc/chromium/src -Iz:/task_1550668703/build/src/ipc/glue -Iz:/task_1550668703/build/src/dom/base -Iz:/task_1550668703/build/src/netwerk/base -Iz:/task_1550668703/build/src/obj-firefox/dist/include -Iz:/task_1550668703/build/src/obj-firefox/dist/include/nspr -Iz:/task_1550668703/build/src/obj-firefox/dist/include/nss -MD -FI z:/task_1550668703/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=z:/task_1550668703/public/build -nologo -wd4091 -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Gw -wd4244 -wd4267 -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -we4553 -Z7 -O2 -Xclang -mdisable-fp-elim -Qunused-arguments -Xclang -MP -Xclang -dependency-file -Xclang .deps/sctp_cc_functions.obj.pp -Xclang -MT -Xclang sctp_cc_functions.obj z:/task_1550668703/build/src/netwerk/sctp/src/netinet/sctp_cc_functions.c
14:09:07 INFO - In file included from z:/task_1550668703/build/src/netwerk/sctp/src/netinet/sctp_cc_functions.c:40:
14:09:07 INFO - In file included from z:/task_1550668703/build/src/netwerk/sctp/src\netinet/sctp_os.h:74:
14:09:07 INFO - In file included from z:/task_1550668703/build/src/netwerk/sctp/src/netinet/sctp_os_userspace.h:456:
14:09:07 INFO - z:/task_1550668703/build/src/netwerk/sctp/src\user_atomic.h(81,13): warning: unused function 'atomic_init' [-Wunused-function]
14:09:07 INFO - static void atomic_init() {} /* empty when we are not using atomic_mtx */
14:09:07 INFO - ^

[Tracking Requested - why for this release]:

It's a unused variable warning as error.
https://searchfox.org/mozilla-central/rev/4587d146681b16ff9878a6fdcba53b04f76abe1d/netwerk/protocol/http/nsHttpTransaction.cpp#450-451

We can simply add Unused << vtable to make compiler happy. However, it might be a good time to remove those assertions since the crashes in bug 1153929 are gone for years. What do you think, Valentin?

Flags: needinfo?(valentin.gosu)

I agree, we should remove the assertions.

Assignee: nobody → valentin.gosu
Flags: needinfo?(valentin.gosu)
Priority: P5 → P1
Whiteboard: [necko-triaged]

The code was added to diagnose an issue that was likely due to heap corruption.
The vtable of the objects was sometimes 0. More details in bug 1153929.
That crash doesn't reproduce anymore so it should be OK to remove.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

No need to track for 67 as this is already fixed in Nightly.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: