Bug 1529274 - Remove debugging code for bug 1153929 r=JuniorHsu

The code was added to diagnose an issue that was likely due to heap corruption.
The vtable of the objects was sometimes 0. More details in bug 1153929.
That crash doesn't reproduce anymore so it should be OK to remove.

Differential Revision: https://phabricator.services.mozilla.com/D20561

--HG--
extra : moz-landing-system : lando